@@ -2,17 +2,20 @@ DIST 3.10-sched-bfs-440-r1.patch 244053 SHA256 0b921d45036d411c4e04b5f6334dee3e7
 DIST 3.12-sched-bfs-444.patch 251377 SHA256 0ff3d40daff1a7e71f15c072e43259c760730f941ce413050f3c856095586b8f SHA512 51f2f3a30d8ae1476e57768ecbeaa9e717be3a3728f276eedb178bedc65273acc3b9e23447c885bf66dde81435d96bf7fa05873de56cef84a9ba8d947560f030 WHIRLPOOL 1a1124b23401b5d52c2de9cd36ff6c53798734ad5520a7c23546fd8f7ad7ffbed55ad0286a285b3dd5221288a137ef3ca3d8b173a3046a9237ea452df192c75d
 DIST 3.14-sched-bfs-447.patch 245314 SHA256 cf71ec72daeaa1ae757e8aaea10a53f972b62548774e3c9bae95d388c7c158bb SHA512 b8ee8d42eeab19c4229a7cd391af6b732c2e8a179f5ed969f1cc8863dfed68d09a6c6e61860df103a5c9535768d8852f7ce2acdc0618b529acc98e2e33be9b0e WHIRLPOOL bfbf8b1e5c43f4908fdf8a115ce708ea68accfe9e9c8f530be43ecaca3df7abfe966164da52545f40c80fc5138e5deb152b8acb49882238899452e51d89e88ba
 DIST 3.17-sched-bfs-458.patch 250056 SHA256 3f0f3b343e5b2b9ddff9c2e56005782bd8e413f6cc452768c598a1eaa79f3d3d SHA512 773d967b7bb199f5319d9f7e72b8ef730ba9fce09972cf97bd724cbe140e3e693d29bf5d1af8dc5a8f8c4a2d9f1420106a8cac355ba8ede828cd43a90f813f35 WHIRLPOOL ba185226f493ae3410e9a6425e1d74d9cf06bf1ffc0bfa263eaf1586e2990e01bba2b7e2d7ec40cedba517ffa46e7f20bf82aeaf3f3e9b15077f374d148b0ec2
+DIST 3.18-sched-bfs-460.patch 250534 SHA256 f42551429eaeb544d24b658d86c24fa56acf6991b48762a48c1420d5c49baef2 SHA512 a7a6025c9062c935f024681a487d9087db9d3baf431f6534e9293174568e81f439400170f96a6060fd8b99453132e0e529eb2cd4fb795eaedda92cd8aaf65526 WHIRLPOOL e1431d93d772965139d5a67acee2c11819c5b1a09b8cfd16ecbab6c3dd086d81359b5e4be81d4bb73ef7273f495bf6c00978bae90652e1ecf1eae24f951e8f6e
 DIST 3.4-sched-bfs-424.patch 238668 SHA256 0faf4dd97ed903599db83d83b79b811d171ae6d1e916ad88ca32e55290fab32d SHA512 70f788b837fb26fc03503eab15eb958f1e86ab682bba394874c75275bfa4fec225ba16df5e77bffed24afcd99d6e13c3be608c81870d4d141bd9c86cd97b64d4 WHIRLPOOL 26f65771a3bc3df5b396d66755bc9b6af5bf200f6c84bae989de0d32f806df3a581c8aea2271163fe3aca54527d34a050bea9249a3db9b9f39f17330939a81df
 DIST bfs424-grq_urwlocks.patch 26428 SHA256 2bf41081dc175776100ce8c3ac909c1a77b314903c82a73cf1b8603ad7c841c4 SHA512 9784d7382b41484623cd410a4a6cebb70aaec39076fff62622f51084b7ca59707f9790b0a53ae0cfd2974d5120c849c542346746d243c59d1d79979141cfc900 WHIRLPOOL bfb8f5ffefd8da7e72e11884833cc742cb3652c32c0022c29a2a786a43b3c9788cf34a9d5d10ed65907de4aee990766bb03c4082cae19e6ae41d22666103ba57
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
 DIST deblob-3.12 120320 SHA256 1d767acd3f461bcaa7ebef744dce1ca3eefde1cd41fde4c69a449e2470ab8c0e SHA512 61073cb763e3e0c21a84c0ee888087fbbf37b667ce0efbbc6c2ebc46ccae8460553511e347cf23d3c3603eec64df738ad4552a1b527453c7d795b8f90c4cf678 WHIRLPOOL c64cc566944ac241149a2a517da069185830be5b8ee25168b2b6b942bcf24fe3f2c0fe487b51a5b7e73e2910af2cabd7167cd1497ab7272c865d1eb3e68e4efe
 DIST deblob-3.14 121249 SHA256 980400e0db952ccdb5a507f99444330af893ed0f8a7a052916fcf0c2b2631f7e SHA512 2cbdf4f3947c12ade0931f0b3fb8b9c0312626a3bfea9d1c7d8d1d875b4673624ed3a6369653521998bbea0cde6730b573d6be918d052f1b553e093cb42a838f WHIRLPOOL 7ba1738ac829d8848104843da6237576f235c0151d53944ff3a7e0308cfb91600ffb9253402a34c2ed106c5b0bb3ce36785ead990396465341a957c58319221c
 DIST deblob-3.17 127288 SHA256 93abf2894baf4d937ff2889fd1bdd04f1093bdb1321c79d8275e40f483e57ad1 SHA512 cb82b7cf59765991f74a1f5829cc6fb036a2e3466337b508884bcc5b27d7fef35db2e653cead705a37c7935c0bfb6bfeb1cdac7293de41994ee9c17ddca2ef39 WHIRLPOOL 0697a7bd39f270393814ffcbc746da6883e41fb32354223cdde8757b126d762bff55e69541c4d9ea0cc75093e19b73c4b6b09d98d9983e07b64fc4794615f2c8
+DIST deblob-3.18 127087 SHA256 c720eabb3911f8dfa4398c4250853df4633018abebc01a509ee4a283c3e00941 SHA512 6fe33762ba19aad7ff891b7b805cc26f6e2926f5e40c92fa45bc7f31bdeb5c8fc42b97e5d37d71b9422da239c7c54abd25f1fa2fa1e5733c6053abbf4c9e9011 WHIRLPOOL c351a3ae15c59081fca69c1b5d9b9de10f024eb01f1426722a0d6ccb7caa34330be42897cd85cf19b22ff876352b0cec1c19707edc81c4cb01ad9c1df2e3d831
 DIST deblob-3.4 109026 SHA256 2fca296bccfa7dc25447f36975971597f67730168a9bc4db0853e55347950680 SHA512 7e6263e265dba957e966b76366566c5b318322c33ec60c9f268af1a375271cd1c1232749902832554f93451225bf61c967f314a48c2890984974d30a984d2e01 WHIRLPOOL f3d8d76078b4a372277926d1d4f3d449968acd64e57a5fbe8fc1c3057e8a9893ba1d580418598089977bb808d9a351de04181dd7f73395e99b306ba8d4886160
 DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae220416b3c0339520d9855 SHA512 341ea8a755c4f1f42ddbc4e7dfe8d786e8b29f497bee3fd72154c8c1c0bcadcb9efff04f2663090bd8741e5b5baafed26a62b9d16c31f3b31665cd3cd3e779d5 WHIRLPOOL 7e6c8eefa9b44e7d50011a9390baf7999533b4016122992c0ac0722cce05dbb8e4b7e96f1f05e9bfdd2ce3e4c08f0e06c8955b68ed8c044ff75f3a314a405824
 DIST deblob-check-3.12 601108 SHA256 e6c07b4220f86007ea31f9ed5d01023253296ddaa0710e65e08f231eccf6085a SHA512 fb293fb5093c410b319203cf0a65457a3ef28430ad6257b08a6e3eb77011d79708c51121c0a8776f55124259719782b4ac9b4c54155c13bb05a2679541816887 WHIRLPOOL e056b4edccd36911fe415cd1780bb484875a16237dce89316144c8ee07df3253bc19abdbee2e51ab3dd9248682470e80409819584c188e22601026e8df222754
 DIST deblob-check-3.14 613747 SHA256 e1d5ced14e38fd415eb5a9a50e180cfdc63b2d0f0350a6d36645b82ef0351304 SHA512 f5901a7c41db34ea3c29e6c6f6fa1afacf4edca1cfad901599b982fd66b5ce3894aa9075b5d15b7a8a6c9694833752fb609d98889b5de39ab59aea7d024a740b WHIRLPOOL 5064bf7423a4703a976b4342da5b3cef65584ee701462e261398170b3e5189036327e114deb15a29ded79541dbe084fa86b08b8c293d4585614ac09f791d7f60
 DIST deblob-check-3.17 638139 SHA256 6ddbf2201595f0ba80166f44163621a4b14f508934c7dcc6c4f39573531aff71 SHA512 f9c60b21af2ee50db85a85329c0a5e3ecc5195ca6d9cc7d6bf499fcdb2eddf1454d99e30b91ce6062f484069ac2096da445643bdea8358c5ff1a79292a5947d6 WHIRLPOOL a0a15be3a48fabc56a782b0f6a92cb88520479d9f837e1de8b4bd2990b751e25f5a130542208f1c18b8f89c5a29edde846adb425834a640b6e188eee38bd98e4
+DIST deblob-check-3.18 654232 SHA256 30f22602b6ddf2cbccc16ef25fdc4d92755f3972e1c671d7cab8b9d6865eb155 SHA512 2cff9abef479a55dd6a0699371be8227ba63b18da1fb153d5df382e0a5e4f1b745b7de256a367a36efa9d12e2aad5622cc288efef009feebf81c108dbef4fe16 WHIRLPOOL e92927ad1565e80ce87e8bda372f8f7eb42bc0f47ad9b19fe5cf737903b2021fd6e3756e8d22b70f3037a46c254fec8b7285b37beb10795ccb4ca99d38876f8c
 DIST deblob-check-3.4 448778 SHA256 28ce952c082e765784f9e5b63f5a3a4fb93545e5e788dc94d094c0b3ae8ea3a0 SHA512 f8f47a0adcc1b9a16c155d89d72d91a02d47bdbb3ac3a353be3873dc868fa44451367b7bb3906817d1ca8f51b64c99ce381d2fa3121582b70c7c2efb18dfc579 WHIRLPOOL 37d219204e15e0c81ac43faed93f7a5051735c474efb2b5167117cd463fbe81167267b756e8ce546447a30ad5bac651c943401ed98ec61713e20af89aa4fb957
 DIST genpatches-3.10-67.base.tar.xz 1011628 SHA256 148e5bbc92bbc59e721a77c2a02c963590a844f208cf3bf42fbb80b72cf969c0 SHA512 cb764718daa1f34a1bc0dfc226b0d3db21e17c604ac4a00b1d937cdcc36daee43ac13ada02f9ce1b939a57953c48f5dd2aaf5ae644a70d8b33ab46fb6cdf1366 WHIRLPOOL e2163418ef83b5d0a598d3ea180764bdceee33ca2de1a5135a930f5d9ae474b4f157ff33b54cfb30c5af4119f89ff58a2391c92b3b7c062397d880ae8b2be6ae
 DIST genpatches-3.10-67.experimental.tar.xz 48592 SHA256 e94c0fda28f853ac362895d0274b31ec980328d74defe1b7841bdaa5092e6277 SHA512 0cba9d0fa4ed5d6c0ca52994220bfc5e30a9e7e58046d7c57643136f61e4f35efcde059e34e095b66897ab4bcdd4f095133900872603f80b825fe1f66315cf25 WHIRLPOOL 622baa54b11e37a95da1b3fc159c5d01d30567023e2b233066cadc102f7a12d83c62cf0984d19eb817ad8fe9b863379966b1e8f4153d7ff5f193b814dce7ed24
@@ -44,16 +47,21 @@ DIST genpatches-3.17-7.extras.tar.xz 16156 SHA256 8c9e038c024cab108e1ea47692c5cd
 DIST genpatches-3.17-9.base.tar.xz 259208 SHA256 daabaa1df13a8e3230d3559cf67e75590d315852cbf213a1fba9ecf2af7815ad SHA512 8aeea478a3e6de3dea75102bef25d5404e37491164289ccc85df41dd90eb3a1ebd7192a65dc73ba0b1c99e3538db706dcd5433e776e1d0cd522deae0ca8e752d WHIRLPOOL 9cfabb4b2459a46eb27bcca8c5eaa93cf1f2ff5a9aba5153e71e117aab21ff4cfee1d4a389dc375503378f7e8b0c3f0a9a5171416db6247ecf83a9f9e4a46a39
 DIST genpatches-3.17-9.experimental.tar.xz 59928 SHA256 941e6dfe36e042d23bb776551d44bbc28a7c01d760600481b1c97ec1c2a64508 SHA512 18cb771689e00b19a4a07966a0447f417c31a123d8f786a3b51f814b7769c362f931ad8e57f728e62ab4436f5282ba33626ad16e911b9dfb750da52ba18a467a WHIRLPOOL 873cc2ce8dbc47f4546703d2ff78109771f07927e0727664766fb07f9e18f6a97e2a3a2a6a591cd674774caf3aa5f5c59429119ccd17298c547956d743701bed
 DIST genpatches-3.17-9.extras.tar.xz 16160 SHA256 d23f013006f2aeecb92a1997c9912561527410abdcbccfd6572e16fa7b8c8465 SHA512 737c66d777d54139313c930449b3b0fe680141f192aea1d1063e585bec2846c90bf0ee2c15500f0386a8d82254085196819b493bb360e20ecc58fec2e6388a7e WHIRLPOOL e36e3ad36d93deaa5667e5cadbabd67029be4cb31247fa37c28dea90dc34eac40076dcb840d43e5d14420df9deb91fe1539dcb3bdd5c1b7a69cd0a1c1fbc546f
+DIST genpatches-3.18-1.base.tar.xz 3288 SHA256 312537dda146ca0f2a3af29d2694bf8372d6765f37e0de7ac8ac63ca62c52210 SHA512 d356576da5f75d961c921993c35ce9e2d1c9e173cd8ec407b4046d47999f41a260c9d00047726cd56d841ed977dd6eecfa63b1d68ad583afdd9656f6df2210b9 WHIRLPOOL dabbc34b20327e0a2e95e63100124921ccbfd5e7e2db0ae0c8d98de26d6903cf019150270459ad3555b7ff5723ba7b131175d4df1d9adb350fda77816a87d9be
+DIST genpatches-3.18-1.experimental.tar.xz 3552 SHA256 4277ff786ab70e12ae1c30b1754b475f10796a8befcef768b5c3d64e2764a562 SHA512 23c13060febe13ea18fa8a4245a1c171bc888a24541e69f4f051540f927fbbd5c512488745667fc3a779d9ce8361f416caf776481f3f3280cee4901219b1371f WHIRLPOOL ef23de40127e14c8cfab115c5b04f8d111493ac5d8cc740e0eb2d327358fd8a1cb2069680f96a200f69ca80d5d734248669bafc71d0ce7822025e796ebfdc332
+DIST genpatches-3.18-1.extras.tar.xz 16160 SHA256 724e3fe7b47f25b11f403becf1629ff0daca47fc5861f84540de6e39114f1f86 SHA512 fdf9955df778e8e1000cc2c96299ff41396c70bd3e59f40fe2c305d5d497d0d3202bf317b42a80515e48b95af0f71f53a96fac36aaf3f278698cc2193d76712e WHIRLPOOL 6e54d4e10f687db4ee815ca135d9dca5a10f42f29028d8c929114d9c8739afa82c6063821014d309664b077e8239d276c7582364c0e8a6096a4f68bd5acc82f3
 DIST genpatches-3.4-87.base.tar.xz 1210220 SHA256 a2689a56e567805b5ed8e842c692c0cfded629bf2958ecc171b1d1ae3e5496b4 SHA512 ece2ab756f83101cfca81f4b7fff3335336428dbc4b98915c6526801c2051f961d0cf88dd3b9e6a1b925d758e379346ed913efbf8328f7108769588630d9fd60 WHIRLPOOL 0945380bd8df7772f42cefe970779a4f6cda42d77aa25f3043d34837729161bef15018daa96104872661c2171f7af6d2eccdfae2faa91bf29509f8a5190901c3
 DIST genpatches-3.4-87.extras.tar.xz 18208 SHA256 d1ffb428d8e9c3553dbc0bf078fc3b7d4c6f8d27e0e0fa5dd71385d84549a9fb SHA512 823a35f8e140b2553dbb8b8dad20dd100db80699bf0ac94b42f8b194141ed44f79ca69ce88ef343c2c9332568cabdb8281331fa5235d8da4d3a855bf4a3b230a WHIRLPOOL 95d5ac7047e14940c3e774a9694e344f114e135b74d3e43b0cf5a2da173c08594b2daa78d28aabd4b1c9fb8e29019e8111a51a19243f0a206c4f7abbf9e43f22
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
 DIST linux-3.12.tar.xz 76384600 SHA256 2e120ec7fde19fa51dc6b6cc11c81860a0775defcad5a5bf910ed9a50e845a02 SHA512 4ba5797e0772726d05c9f2eee66dc6dc2a5033c749ef44764c805a83da739ed5d0c6443b76785e38fe1ef74cc7ade787e48144faed0cfcb6f124f05248c700ff WHIRLPOOL a40195f6b53ba3440cf90a44495f6a59670f750851d1518e2bdfe3b949f0e898d1df5d37e271c31c555087026ddb6cc2c9109b22b9639e3222735e6f650a1417
 DIST linux-3.14.tar.xz 78399152 SHA256 61558aa490855f42b6340d1a1596be47454909629327c49a5e4e10268065dffa SHA512 5730d83a7a81134c1e77c0bf89e42dee4f8251ad56c1ac2be20c59e26fdfaa7bea55f277e7af156b637f22e1584914a46089af85039177cb43485089c74ac26e WHIRLPOOL 5ad07b78c362ba0b21c50b4abb99407cae06bd08576f3fd8f36047b01409eba096263208020da3dcad4977eefc61d66502276754097bc127635df1d7a5817d41
 DIST linux-3.17.tar.xz 80333152 SHA256 f5153ec93c5fcd41b247950e6a9bcbc63fa87beafd112c133a622439a0f76251 SHA512 29c99764e371f7005dbbe2bbe4458b4deeae5297da7e5b719b0f29f6f018629338b608369162ae6bd76bec4d8719cf491257ac57fdd5277cce8941b7f90246a0 WHIRLPOOL 4b0ba9d997f28a317991287160c91c4e4f2245d7e08c7cb9691f67c3838bddb3ab8048b01e841e6659eceb94a269b6bde32f4ca521d999593d0e9473c8559b46
+DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
 DIST linux-3.4.tar.xz 66748028 SHA256 ff3dee6a855873d12487a6f4070ec2f7996d073019171361c955639664baa0c6 SHA512 1c49b336750c9c2b49d21e54126f22a800367296be0d57e6df28b1532cbeba7fc3bdf4cfe27d9810576e76c2db2e9c2493f0804451c915137cb78d7aa61f236c WHIRLPOOL a36e62fe197ba7c08d498a79034da58091a94348f69542241067c9ebef683f86371b2c0a3b3fb6c4611e2fb885d9b74eee5c1f46a493c72dfb76c5665f0b8a6a
 DIST patch-3.10-ck1-r1.bz2 57305 SHA256 7b7835ba32c3ce1afa81139c848b7f6ec13540ba00f64ef4290c56eea52808c4 SHA512 d58dd603f02853c945d5980630e5123f7cc5fd012e0c61508cd08962cbdd4e35dfb3a6dbdd9452d8b936e6c1ec2cb552b39dc3bc6dfc29e8d020c1e2ad92825f WHIRLPOOL 322da3c72ed3641f0ec8c071dd6fe79c5a860e87a3f023df9c1fd582ed16ffaf6ba67fa93806b7545658551bbb311235dfdae8db1f09b4fb7882c79827768b11
 DIST patch-3.12-ck2.bz2 58929 SHA256 413def4af24ff70615cf5ef5cc1f1347bd634d87686a84ad0e2c2d3b052da8b8 SHA512 7f97d3db7569e7facd7eb85283519e4c8748e18b4767b8ba4a7637f18667eed3c4aadfe700f5788ed24038ca8c008452d8f9351cf92975055e93fbbdb38671a8 WHIRLPOOL 58d5617cc5fc3eec51a2f10adf9a0aa2c3611ef15b5efae9929b153f30d2443f3b4b011028b447a5e9e4541979fbc9aa337716f941bf6ec942382aea92f1f324
 DIST patch-3.14-ck1.bz2 58269 SHA256 8b5924a8aa17876d394cdeb84740d96317e94d2430caddf753c416100b917d3c SHA512 d745370376e660245e0a5cc4512f0c584a4c782ddb0747637d6ec60021d95afa09d5728f44756c48843b398ba3072823bea99b1713c0833c941a522da0b6f305 WHIRLPOOL 7a9dda7e0a20b2c2ee373d957441af83f2148cfdf224ba20fe699a1f319f898493534d4b3115ed09851604760b767d2cb4c97e7f01501e0e261fa68f21937572
 DIST patch-3.17-ck2.bz2 58999 SHA256 4236fa5b614d6d20a4f83affddae07c836b6ff289336c3b59602c0ff0709ac92 SHA512 5205197e78ac0bb9ee4717d2af582d75301ff690177b6693428a3d0f10d6e66831e39050156bc1596b12aab9f2596cbd487f71db6fb56261517b233f4be5d1ef WHIRLPOOL 87f62aee317f3b2c745541135245ad6ef1bed3a17bfdbe6202d963788f5ecd4c24f206cb29925ec7ef42d54daa181ee14eaaf156fdf0ffffad329538d71de85c
+DIST patch-3.18-ck1.bz2 59246 SHA256 e603c2752c160c124ae54dba8a4a9820d86912e5685b3bf6cd99705d7b147552 SHA512 c1ffbbc641cf9ef3c666a1fe5ddff1ab9ed02eb2d8d229d5ce4c11487609ef81beee456c211a658355c2061a108042929b9ad62914395a22077754ade4eb6a23 WHIRLPOOL 3562ad8e8859fa4845af99639a69cd45b73a5bcdcc3cb5bf473eeff3708c77aaf5ca6f0816e57010285bf1fdb6724d5736dc2ae74392d96cebccfd266b08d2bf
 DIST patch-3.4-ck3.bz2 58930 SHA256 97a05793e15836866f7eabeeb08abec06dccbc23cfdd521c7e2c6c5baee20601 SHA512 f72c88f0b3570e3aa0f9c36cae5d535282c2e5aa29b3c0ac9e13db492f9df310f1fedbbcff5ea68ec872ea53c7cd968cff8e60746ccbeebb87f48a8a8a8d0c78 WHIRLPOOL 351be52877128717a40cdadf5c13aaddd688994f4654c901d905233cf41d5f0daf4aa771bf62da52d3d0acd98fcfa49234efbd0f705f4f34becd7b1ea22ddeb3
 DIST urw-locks.patch 7451 SHA256 09c7faed0234aabb5af6dd156eb99f2a2855b4adfec3a0a2dd9e6b6ef47d4cdd SHA512 dc5dd6f36ec8de68ad723174728df28137dbbecf81b9aca07cdeaec2d6410f42e5b5b14cd1d7fafbad44c4ab0f420db9285b3df28b990a43bc3a05327ef92e4c WHIRLPOOL 625444ada085ae324a1032e9c4d1b88376df9cd05ca613571799e96645eb58217ffd93c47d33e4ce4f0cc15eb82b572a00aee6edca93a371cf39474f54dee242
